# simple_fastapi_project

./: README.md  main.py  parse_using_pydantic.jmx  pyproject.toml  respond_from_router.jmx  respond_from_router_with_text.jmx
